@@ -1,3 +1,13 @@
+2002-11-13  Maciej Stachowiak  <mjs@apple.com>
+
+	Pass mime type instead of full response to content policy delegate
+	method, in preparation for merging it with the file URL policy.
+	
+        * WebView.subproj/WebControllerPolicyDelegate.h:
+        * WebView.subproj/WebDefaultPolicyDelegate.m:
+        * WebView.subproj/WebMainResourceClient.m:
+        (-[WebMainResourceClient handle:didReceiveResponse:]):
+
 2002-11-13  Darin Adler  <darin@apple.com>
 
 	- fixed 3083982 -- Logging into AOL gives null view
